fix a few things